# MLtraining_xingjian

./: .gitignore  README.md  text.py
10_CNN_GNN/: CNN_professor.py  GNN_simple_example.py  README.md  cnn_again_for_more_details.py
1_linear_regression/: Assignment1.ipynb  README.md
1_linear_regression/Train1/: Assignment1.ipynb  example_module.py  test.py  train.py
2_logistic_regression/: README.md
2_logistic_regression/Train2/: Assignment2.ipynb  Logisticregression.py  example_module.py  text.py
3_k_nearest_neighbor/: KNN1.py  KNN2.py  Knn_FlowerClassification.py  README.md  k-NN_example.py
4_k_means/: README.md
4_k_means/Train4/: Assignment4.ipynb  Kmeans.py
5_support_vector_machine/: README.md
5_support_vector_machine/Train5/: Assignment5.ipynb  LinearSVM.py
6_kernel_based_SVM/: README.md
6_kernel_based_SVM/Train6/: KernelSVM.py  Util.py
7_decision_tree/: README.md
7_decision_tree/Train7/: DecisionTree.py  RegressionTree_RandomForest.py
8_artificial_neural_network/: CNN_again.py  README.md  convolution_layers.py
8_artificial_neural_network/CNN/: CNN.py
8_artificial_neural_network/Train8/: CNN.py  DNN.py  model.pth  optimizer.pth
9_RNN_LSTM_Transformer/: LSTM.py  LSTM_iris.py  LSTM_trying.py  RNN_iris.py  RNN_nonclass.py
9_RNN_LSTM_Transformer/nn/: LSTMLayers.py
Training_Documents/: README.md  READ_ME.md
Training_Documents/Array/: array_experiment.cpp  array_experiment2.cpp  array_experiment3.cpp  result
Training_Documents/icb_cpp/: CMakeLists.txt  icb_arpack_cpp.cpp
training_documents/: READ_ME.md
(+9 files in other folders)
